--- a/Index.html
+++ b/Index.html
@@ -4,24 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sesion</title>
-    //Lamar estilos css//
-    <link rel="stylesheat" href="style.css">
+    <!-- Llamar estilos CSS -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="formulario">
-     <H1>Inicio de Sesion</H1>
-     <form method="post">
-      <div Class="Username">
-         <imput type="text" required>
-            <label>Nombre de usuario</label>
-      </div>
-     <div class="Contrasena">
-            <imput type="password" required>
-            <label>Contraseña</label>
-       </div>
-       <div class="recordar">¿Olvido su contraseña?</div>
-       <input type="submit" value="Iniciar">
-     </form>
+        <h1>Inicio de Sesion</h1>
+        <form method="post">
+            <div class="Username">
+                <input type="text" required>
+                <label>Nombre de usuario</label>
+            </div>
+            <div class="Contrasena">
+                <input type="password" required>
+                <label>Contraseña</label>
+            </div>
+            <div class="recordar">¿Olvidó su contraseña?</div>
+            <input type="submit" value="Iniciar">
+        </form>
     </div>
 </body>
 </html>
